重构项目
1. springboot从3.1-->springboot2.1
2. 删除没用调用的代码
3. 完善项目注释
4. 配置mybatisplus逻辑删除
5. 去除redis缓存功能
6. 去除mysql主从分离配置

将复杂配置去除，留下清晰逻辑，又二次开发人员自由添加