@@ -2,6 +2,7 @@ package cn.org.alan.exam.service.impl;
 
 import cn.hutool.captcha.CaptchaUtil;
 import cn.hutool.captcha.LineCaptcha;
+import cn.org.alan.exam.common.exception.ServiceRuntimeException;
 import cn.org.alan.exam.common.result.Result;
 import cn.org.alan.exam.converter.UserConverter;
 import cn.org.alan.exam.mapper.RoleMapper;
@@ -9,46 +10,47 @@ import cn.org.alan.exam.mapper.UserDailyLoginDurationMapper;
 import cn.org.alan.exam.mapper.UserMapper;
 import cn.org.alan.exam.model.entity.User;
 import cn.org.alan.exam.model.entity.UserDailyLoginDuration;
-import cn.org.alan.exam.model.form.Auth.LoginForm;
-import cn.org.alan.exam.model.form.UserForm;
-import cn.org.alan.exam.security.SysUserDetails;
+import cn.org.alan.exam.model.form.auth.LoginForm;
+import cn.org.alan.exam.model.form.user.UserForm;
 import cn.org.alan.exam.service.IAuthService;
-import cn.org.alan.exam.util.impl.DateTimeUtil;
-import cn.org.alan.exam.util.impl.JwtUtil;
-import cn.org.alan.exam.util.impl.SecretUtils;
-import cn.org.alan.exam.util.impl.SecurityUtil;
+import cn.org.alan.exam.utils.DateTimeUtil;
+import cn.org.alan.exam.utils.JwtUtil;
+import cn.org.alan.exam.utils.SecretUtils;
+import cn.org.alan.exam.utils.SecurityUtil;
+import cn.org.alan.exam.utils.security.SysUserDetails;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.toolkit.StringUtils;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import jakarta.annotation.Resource;
-import jakarta.servlet.ServletOutputStream;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpSession;
+
 import lombok.SneakyThrows;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Service;
 
+import javax.annotation.Resource;
+import javax.servlet.ServletOutputStream;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
 import java.io.IOException;
 import java.time.Duration;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 
 
 /**
+ * 权限管理服务实现类
+ *
  * @Author Alan
  * @Version
  * @Date 2024/3/28 1:33 PM
@@ -77,6 +79,7 @@ public class AuthServiceImpl implements IAuthService {
 
     /**
      * 登录
+     *
      * @param request
      * @param loginForm 入参
      * @return 响应
@@ -86,8 +89,8 @@ public class AuthServiceImpl implements IAuthService {
     public Result<String> login(HttpServletRequest request, LoginForm loginForm) {
         // 先判断用户是否通过校验
         String s = stringRedisTemplate.opsForValue().get("isVerifyCode" + request.getSession().getId());
-        if (StringUtils.isBlank(s)&&captchaEnabled) {
-            return Result.failed("请先验证验证码");
+        if (StringUtils.isBlank(s) && captchaEnabled) {
+            throw new ServiceRuntimeException("请先验证验证码");
         }
         // 根据用户名获取用户信息
         LambdaQueryWrapper<User> wrapper = new LambdaQueryWrapper<>();
@@ -95,15 +98,15 @@ public class AuthServiceImpl implements IAuthService {
         User user = userMapper.selectOne(wrapper);
         // 判读用户名是否存在
         if (Objects.isNull(user)) {
-            return Result.failed("该用户不存在");
+            throw new ServiceRuntimeException("该用户不存在");
         }
-        if(user.getIsDeleted() == 1){
-            return Result.failed("该用户已注销");
+        if (user.getIsDeleted() == 1) {
+            throw new ServiceRuntimeException("该用户已注销");
         }
         BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();
         String userPassword = SecretUtils.desEncrypt(loginForm.getPassword());
         if (!encoder.matches(userPassword, user.getPassword())) {
-            return Result.failed("密码错误");
+            throw new ServiceRuntimeException("密码错误");
         }
         user.setPassword(null);
         // 根据用户角色代码
@@ -111,7 +114,8 @@ public class AuthServiceImpl implements IAuthService {
 
         // 数据库获取的权限是字符串springSecurity需要实现GrantedAuthority接口类型，所有这里做一个类型转换
         List<SimpleGrantedAuthority> userPermissions = permissions.stream()
-                .map(permission -> new SimpleGrantedAuthority("role_" + permission)).toList();
+                .map(permission -> new SimpleGrantedAuthority("role_" + permission)).collect(java.util.stream.Collectors.toList());
+        ;
 
         // 创建一个sysUserDetails对象，该类实现了UserDetails接口
         SysUserDetails sysUserDetails = new SysUserDetails(user);
@@ -120,7 +124,7 @@ public class AuthServiceImpl implements IAuthService {
         // 将用户序列化 转为字符串
         String userInfo = objectMapper.writeValueAsString(user);
         // 创建token
-        String token = jwtUtil.createJwt(userInfo, userPermissions.stream().map(String::valueOf).toList());
+        String token = jwtUtil.createJwt(userInfo, userPermissions.stream().map(String::valueOf).collect(java.util.stream.Collectors.toList()));
         // 把token放到redis中
         stringRedisTemplate.opsForValue().set("token:" + request.getSession().getId(), token, 30, TimeUnit.MINUTES);
 
@@ -134,7 +138,7 @@ public class AuthServiceImpl implements IAuthService {
 
         // 用户信息存放进上下文
         SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
-        //用户信息放入
+        // 用户信息放入
         // 清除redis通过校验表示
         stringRedisTemplate.delete("isVerifyCode" + request.getSession().getId());
         return Result.success("登录成功", token);
@@ -142,6 +146,7 @@ public class AuthServiceImpl implements IAuthService {
 
     /**
      * 注销
+     *
      * @param request request对象，需要清除session里面的内容
      * @return
      */
@@ -150,7 +155,7 @@ public class AuthServiceImpl implements IAuthService {
         // 清除session
         HttpSession session = request.getSession(false);
         String token = request.getHeader("Authorization");
-        if (StringUtils.isNotBlank(token) && session!=null) {
+        if (StringUtils.isNotBlank(token) && session != null) {
             token = token.substring(7);
             stringRedisTemplate.delete("token:" + request.getSession().getId());
             session.invalidate();
@@ -160,6 +165,7 @@ public class AuthServiceImpl implements IAuthService {
 
     /**
      * 获取图形验证码
+     *
      * @param request  request对象，获取sessionId
      * @param response response对象，响应图片
      */
@@ -184,6 +190,7 @@ public class AuthServiceImpl implements IAuthService {
 
     /**
      * 验证验证码
+     *
      * @param request request对象获取sessionId
      * @param code    用户输入的验证码
      * @return
@@ -193,10 +200,10 @@ public class AuthServiceImpl implements IAuthService {
         String key = "code" + request.getSession().getId();
         String rightCode = stringRedisTemplate.opsForValue().get(key);
         if (StringUtils.isBlank(rightCode)) {
-            return Result.failed("验证码已过期");
+            throw new ServiceRuntimeException("验证码已过期");
         }
         if (!rightCode.equalsIgnoreCase(code)) {
-            return Result.failed("验证码错误");
+            throw new ServiceRuntimeException("验证码错误");
         }
         // 验证码校验后redis清除验证码，避免重复使用
         stringRedisTemplate.delete(key);
@@ -207,6 +214,7 @@ public class AuthServiceImpl implements IAuthService {
 
     /**
      * 注册用户
+     *
      * @param request  request对象，用于获取sessionId
      * @param userForm 用户信息
      * @return
@@ -216,11 +224,11 @@ public class AuthServiceImpl implements IAuthService {
         // 判断验证码
         String s = stringRedisTemplate.opsForValue().get("isVerifyCode" + request.getSession().getId());
         if (StringUtils.isBlank(s)) {
-            return Result.failed("请先验证验证码");
+            throw new ServiceRuntimeException("请先验证验证码");
         }
         // 判断两次密码是否一致
         if (!SecretUtils.desEncrypt(userForm.getPassword()).equals(SecretUtils.desEncrypt(userForm.getCheckedPassword()))) {
-            return Result.failed("两次密码不一致");
+            throw new ServiceRuntimeException("两次密码不一致");
         }
         User user = userConverter.fromToEntity(userForm);
         user.setPassword(new BCryptPasswordEncoder().encode(SecretUtils.desEncrypt(user.getPassword())));
@@ -240,7 +248,7 @@ public class AuthServiceImpl implements IAuthService {
     public Result<String> sendHeartbeat(HttpServletRequest request) {
         // 创建Redis键
         String key = HEARTBEAT_KEY_PREFIX + SecurityUtil.getUserId();
-        if (SecurityUtil.getRoleCode()==1) {
+        if (SecurityUtil.getRoleCode() == 1) {
             // 删除该键值并获取上一次的心跳时间
             String lastHeartbeatStr = stringRedisTemplate.opsForValue().get(key);
             // 获取当前时间
@@ -249,9 +257,9 @@ public class AuthServiceImpl implements IAuthService {
             stringRedisTemplate.opsForValue().set(key, now.toString());
             LocalDateTime lastHeartbeat = null;
             // 将上次时间字符串转换为时间对象
-            if(lastHeartbeatStr==null){
+            if (lastHeartbeatStr == null) {
                 lastHeartbeat = now;
-            }else {
+            } else {
                 lastHeartbeat = LocalDateTime.parse(lastHeartbeatStr);
             }
             // 计算上次和现在过了多久 连个时间的时间差
@@ -261,9 +269,9 @@ public class AuthServiceImpl implements IAuthService {
             // 实现累加逻辑，比如更新数据库中的记录
             // 获取当前用户的今天的记录
             Integer userId = SecurityUtil.getUserId();
-            UserDailyLoginDuration userDailyLogin = userDailyLoginDurationMapper.getTodeyRecord(userId,date);
+            UserDailyLoginDuration userDailyLogin = userDailyLoginDurationMapper.getTodayRecord(userId, date);
             // 如果记录为空
-            if(Objects.isNull(userDailyLogin)){
+            if (Objects.isNull(userDailyLogin)) {
                 // 如果没记录
                 UserDailyLoginDuration userDailyLoginDuration = new UserDailyLoginDuration();
                 // 设置用户id
@@ -271,16 +279,16 @@ public class AuthServiceImpl implements IAuthService {
                 // 设置今天日期
                 userDailyLoginDuration.setLoginDate(date);
                 // 存入秒数
-                userDailyLoginDuration.setTotalSeconds((int)durationSinceLastHeartbeat.getSeconds());
+                userDailyLoginDuration.setTotalSeconds((int) durationSinceLastHeartbeat.getSeconds());
                 userDailyLoginDurationMapper.insert(userDailyLoginDuration);
-            }else {
+            } else {
                 // 如果有记录
                 // 累加今天的时长
                 userDailyLogin.setTotalSeconds(userDailyLogin.getTotalSeconds()
-                        +(int)durationSinceLastHeartbeat.getSeconds());
+                        + (int) durationSinceLastHeartbeat.getSeconds());
                 userDailyLoginDurationMapper.updateById(userDailyLogin);
             }
         }
-         return Result.success("请求成功");
+        return Result.success("请求成功");
     }
 }
