@@ -1,33 +1,26 @@
 package cn.org.alan.exam.service.impl;
 
+import cn.org.alan.exam.common.exception.ServiceRuntimeException;
 import cn.org.alan.exam.common.result.Result;
 import cn.org.alan.exam.converter.GradeConverter;
 import cn.org.alan.exam.mapper.*;
 import cn.org.alan.exam.model.entity.Grade;
 import cn.org.alan.exam.model.entity.UserGrade;
-import cn.org.alan.exam.model.form.GradeForm;
-import cn.org.alan.exam.model.vo.GradeVO;
+import cn.org.alan.exam.model.form.grade.GradeForm;
+import cn.org.alan.exam.model.vo.grade.GradeVO;
 import cn.org.alan.exam.service.IGradeService;
-import cn.org.alan.exam.util.impl.CacheClient;
-import cn.org.alan.exam.util.impl.ClassTokenGenerator;
-import cn.org.alan.exam.util.impl.SecurityUtil;
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import cn.org.alan.exam.utils.ClassTokenGenerator;
+import cn.org.alan.exam.utils.SecurityUtil;
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
-import jakarta.annotation.Resource;
-import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
+import javax.annotation.Resource;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
-import java.util.concurrent.TimeUnit;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * 班级服务实现类
@@ -44,17 +37,8 @@ public class GradeServiceImpl extends ServiceImpl<GradeMapper, Grade> implements
     @Resource
     private UserMapper userMapper;
     @Resource
-    private StringRedisTemplate stringRedisTemplate;
-    @Resource
-    private CacheClient cacheClient;
-    @Resource
     private UserGradeMapper userGradeMapper;
 
-    /**
-     * 新增班级
-     * @param gradeForm
-     * @return
-     */
     @Override
     @Transactional
     public Result<String> addGrade(GradeForm gradeForm) {
@@ -65,17 +49,11 @@ public class GradeServiceImpl extends ServiceImpl<GradeMapper, Grade> implements
         // 开始添加数据
         int rows = gradeMapper.insert(grade);
         if (rows == 0) {
-            return Result.failed("添加失败");
+            throw new ServiceRuntimeException("新建班级失败");
         }
-        return Result.success("添加成功");
+        return Result.success("新建班级成功");
     }
 
-    /**
-     * 修改班级
-     * @param id
-     * @param gradeForm
-     * @return
-     */
     @Override
     @Transactional
     public Result<String> updateGrade(Integer id, GradeForm gradeForm) {
@@ -87,37 +65,24 @@ public class GradeServiceImpl extends ServiceImpl<GradeMapper, Grade> implements
         // 更新班级
         int rows = gradeMapper.update(gradeUpdateWrapper);
         if (rows == 0) {
-            return Result.failed("修改失败");
+            throw new ServiceRuntimeException("修改班级失败");
         }
-        Grade byId = getById(id);
-        return Result.success("修改成功");
+        return Result.success("修改班级成功");
     }
 
-    /**
-     * 删除班级
-     * @param gradeId
-     * @return
-     */
     @Override
     @Transactional
     public Result<String> deleteGrade(Integer gradeId) {
         // 逻辑删除班级
-        int rows = gradeMapper.deleteGrade(gradeId);
+        int rows = gradeMapper.deleteById(gradeId);
         if (rows == 0) {
-            return Result.failed("删除失败");
+            throw new ServiceRuntimeException("删除班级失败");
         }
         // 逻辑删除教师与班级的关联
-        userGradeMapper.deleteUserGrade(gradeId);
+        userGradeMapper.deleteById(gradeId);
         return Result.success("删除成功");
     }
 
-    /**
-     * 分页查询班级
-     * @param pageNum
-     * @param pageSize
-     * @param gradeName
-     * @return
-     */
     @Override
     public Result<IPage<GradeVO>> getPaging(Integer pageNum, Integer pageSize, String gradeName) {
         Page<GradeVO> page = new Page<>(pageNum, pageSize);
@@ -126,60 +91,49 @@ public class GradeServiceImpl extends ServiceImpl<GradeMapper, Grade> implements
         Integer userId = SecurityUtil.getUserId();
         // 如果是教师获取教师加入班级的ID
         List<Integer> gradeIdList = null;
-        if(roleCode==2){
+        if (roleCode == 2) {
             gradeIdList = userGradeMapper.getGradeIdListByUserId(userId);
         }
         // 开始查询班级
-        page = gradeMapper.selectGradePage(page, userId, gradeName, roleCode,gradeIdList);
+        page = gradeMapper.selectGradePage(page, userId, gradeName, roleCode, gradeIdList);
         return Result.success("查询成功", page);
     }
 
-    /**
-     * 退出班级
-     * @param ids
-     * @return
-     */
     @Override
     public Result<String> removeUserGrade(String ids) {
         // 字符串转换为列表
         List<Integer> userIds = Arrays.stream(ids.split(","))
                 .map(Integer::parseInt)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
         // 移出班级
         int rows = userMapper.removeUserGrade(userIds);
         if (rows == 0) {
-            return Result.failed("移除失败");
+            throw new ServiceRuntimeException("批量用户移除班级失败");
         }
-        return Result.success("移除成功");
+        return Result.success("批量用户移除班级成功");
     }
 
-    /**
-     * 获取所有班级列表
-     * @return
-     */
     @Override
     public Result<List<GradeVO>> getAllGrade() {
         // 获取角色代码和用户ID
         Integer roleCode = SecurityUtil.getRoleCode();
         Integer userId = SecurityUtil.getUserId();
         List<Integer> gradeIdList = null;
-        if(roleCode==2){
+        if (roleCode == 2) {
             gradeIdList = userGradeMapper.getGradeIdListByUserId(userId);
+            if (gradeIdList.isEmpty()) {
+                throw new ServiceRuntimeException("教师还没加入班级暂无数据");
+            }
         }
         // 开始查询当前用户管理的所有班级
-        List<GradeVO> grades = gradeMapper.getAllGrade(userId, roleCode,gradeIdList);
+        List<GradeVO> grades = gradeMapper.getAllGrade(userId, roleCode, gradeIdList);
         return Result.success("查询成功", grades);
     }
 
-    /**
-     * 老师加入班级
-     * @param code
-     * @return
-     */
     @Override
     public Result teacherJoinClass(String code) {
         // 获取班级信息 用户ID
-        Grade grade = gradeMapper.getGradeById(code);
+        Grade grade = gradeMapper.getGradeByCode(code);
         Integer userId = SecurityUtil.getUserId();
         // 设置教师和班级的联系
         UserGrade userGrade = new UserGrade();
@@ -188,16 +142,11 @@ public class GradeServiceImpl extends ServiceImpl<GradeMapper, Grade> implements
         // 开始添加教师和班级的联系
         int insert = userGradeMapper.insert(userGrade);
         if (insert > 0) {
-            return Result.success("加入成功");
+            return Result.success("教师加入班级成功");
         }
-        return Result.failed("加入失败");
+        throw new ServiceRuntimeException("教师加入班级失败");
     }
 
-    /**
-     * 老师退出班级
-     * @param gradeId
-     * @return
-     */
     @Override
     public Result teacherExitClass(String gradeId) {
         // 获取用户ID
@@ -205,15 +154,11 @@ public class GradeServiceImpl extends ServiceImpl<GradeMapper, Grade> implements
         // 开始调用sql教师退出班级
         Integer row = userGradeMapper.teacherExitClass(userId, gradeId);
         if (row > 0) {
-            return Result.success("退出成功");
+            return Result.success("教师退出班级成功");
         }
-        return Result.failed("退出失败");
+        throw new ServiceRuntimeException("教师退出班级失败");
     }
 
-    /**
-     * 学生退出班级
-     * @return
-     */
     @Override
     public Result userExitGrade() {
         // 获取班级和用户ID
@@ -222,9 +167,9 @@ public class GradeServiceImpl extends ServiceImpl<GradeMapper, Grade> implements
         // 开始调用sql用户退出班级
         Integer row = userMapper.userExitGrade(gradeId, userId);
         if (row > 0) {
-            return Result.success("退出成功");
+            return Result.success("学生退出班级成功");
         }
-        return Result.failed("退出失败");
+        throw new ServiceRuntimeException("学生退出班级失败");
     }
 
 }
