@@ -8,26 +8,24 @@ import cn.org.alan.exam.model.vo.answer.AnswerExamVO;
 import cn.org.alan.exam.model.vo.answer.UncorrectedUserVO;
 import cn.org.alan.exam.model.vo.answer.UserAnswerDetailVO;
 import cn.org.alan.exam.service.IManualScoreService;
-import cn.org.alan.exam.util.impl.ClassTokenGenerator;
-import cn.org.alan.exam.util.impl.SecurityUtil;
+import cn.org.alan.exam.utils.ClassTokenGenerator;
+import cn.org.alan.exam.utils.SecurityUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
-import jakarta.annotation.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import javax.annotation.Resource;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 
 
 /**
- * <p>
- * 服务实现类
- * </p>
+ * 答卷管理服务实现类
  *
  * @author WeiJin
  * @since 2024-03-21
@@ -50,6 +48,7 @@ public class ManualScoreServiceImpl extends ServiceImpl<ManualScoreMapper, Manua
 
     /**
      * 试卷查询信息
+     *
      * @param userId
      * @param examId
      * @return
@@ -60,7 +59,6 @@ public class ManualScoreServiceImpl extends ServiceImpl<ManualScoreMapper, Manua
         return Result.success("查询成功", list);
     }
 
-
     @Override
     @Transactional
     public Result<String> correct(List<CorrectAnswerFrom> correctAnswerFroms) {
@@ -68,7 +66,7 @@ public class ManualScoreServiceImpl extends ServiceImpl<ManualScoreMapper, Manua
         AtomicInteger manualTotalScore = new AtomicInteger();
         correctAnswerFroms.forEach(correctAnswerFrom -> {
 
-            //获取用户作答信息id
+            // 获取用户作答信息id
             LambdaQueryWrapper<ExamQuAnswer> wrapper = new LambdaQueryWrapper<ExamQuAnswer>()
                     .select(ExamQuAnswer::getId)
                     .eq(ExamQuAnswer::getExamId, correctAnswerFrom.getExamId())
@@ -83,7 +81,7 @@ public class ManualScoreServiceImpl extends ServiceImpl<ManualScoreMapper, Manua
         });
         manualScoreMapper.insertList(list);
 
-        //把用户考试记录修改为已批改，并把简答题分数添加进去
+        // 把用户考试记录修改为已批改，并把简答题分数添加进去
         CorrectAnswerFrom correctAnswerFrom = correctAnswerFroms.get(0);
         LambdaUpdateWrapper<UserExamsScore> userExamsScoreLambdaUpdateWrapper = new LambdaUpdateWrapper<UserExamsScore>()
                 .eq(UserExamsScore::getExamId, correctAnswerFrom.getExamId())
@@ -92,23 +90,23 @@ public class ManualScoreServiceImpl extends ServiceImpl<ManualScoreMapper, Manua
                 .setSql("user_score = user_score + " + manualTotalScore.get());
         userExamsScoreMapper.update(userExamsScoreLambdaUpdateWrapper);
 
-        //根据该考试是否有证书来给用户颁发对应证书
-        //判断该考试是否有证书
+        // 根据该考试是否有证书来给用户颁发对应证书
+        // 判断该考试是否有证书
         LambdaQueryWrapper<Exam> examWrapper = new LambdaQueryWrapper<Exam>()
                 .select(Exam::getId, Exam::getCertificateId, Exam::getPassedScore)
                 .eq(Exam::getId, correctAnswerFrom.getExamId());
         Exam exam = examMapper.selectOne(examWrapper);
-        //不必对exam做非空验证，这里一定不为null
+        // 不必对exam做非空验证，这里一定不为null
         if (exam.getCertificateId() != null && exam.getCertificateId() > 0) {
-            //有证书 获取用户得分
+            // 有证书 获取用户得分
             LambdaQueryWrapper<UserExamsScore> examsScoreWrapper = new LambdaQueryWrapper<UserExamsScore>()
                     .select(UserExamsScore::getId, UserExamsScore::getUserScore)
                     .eq(UserExamsScore::getExamId, correctAnswerFrom.getExamId())
                     .eq(UserExamsScore::getUserId, correctAnswerFrom.getUserId());
             UserExamsScore userExamsScore = userExamsScoreMapper.selectOne(examsScoreWrapper);
-            //不必对userExamsScore做非空验证，这里一定不为null
+            // 不必对userExamsScore做非空验证，这里一定不为null
             if (userExamsScore.getUserScore() >= exam.getPassedScore()) {
-                //分数合格，判罚证书
+                // 分数合格，判罚证书
                 CertificateUser certificateUser = new CertificateUser();
                 certificateUser.setUserId(correctAnswerFrom.getUserId());
                 certificateUser.setExamId(correctAnswerFrom.getExamId());
@@ -122,30 +120,30 @@ public class ManualScoreServiceImpl extends ServiceImpl<ManualScoreMapper, Manua
     }
 
     @Override
-    public Result<IPage<AnswerExamVO>> examPage(Integer pageNum, Integer pageSize,String examName) {
+    public Result<IPage<AnswerExamVO>> examPage(Integer pageNum, Integer pageSize, String examName) {
 
         Page<AnswerExamVO> page = new Page<>(pageNum, pageSize);
-        //获取自己创建的考试
-        List<AnswerExamVO> list = examMapper.selectMarkedList(page, SecurityUtil.getUserId(), SecurityUtil.getRole(),examName).getRecords();
+        // 获取自己创建的考试
+        List<AnswerExamVO> list = examMapper.selectMarkedList(page, SecurityUtil.getUserId(), SecurityUtil.getRole(), examName).getRecords();
 
-        //获取相关信息
+        // 获取相关信息
         list.forEach(answerExamVO -> {
-            //需要参加考试人数
+            // 需要参加考试人数
             answerExamVO.setClassSize(examGradeMapper.selectClassSize(answerExamVO.getExamId()));
-            //实际参加考试人数
+            // 实际参加考试人数
             LambdaQueryWrapper<UserExamsScore> numberWrapper = new LambdaQueryWrapper<UserExamsScore>()
                     .eq(UserExamsScore::getExamId, answerExamVO.getExamId());
             answerExamVO.setNumberOfApplicants(userExamsScoreMapper.selectCount(numberWrapper).intValue());
-            //已阅人数
+            // 已阅人数
             LambdaQueryWrapper<UserExamsScore> correctedWrapper = new LambdaQueryWrapper<UserExamsScore>()
                     .eq(UserExamsScore::getWhetherMark, 1)
-                    .eq(UserExamsScore::getExamId,answerExamVO.getExamId());
+                    .eq(UserExamsScore::getExamId, answerExamVO.getExamId());
             answerExamVO.setCorrectedPaper(userExamsScoreMapper.selectCount(correctedWrapper).intValue());
         });
-        //移除不需要批改的试卷
+        // 移除不需要批改的试卷
         page.setRecords(list.stream()
                 .filter(answerExamVO -> answerExamVO.getNeededMark() == 1)
-                .toList());
+                .collect(java.util.stream.Collectors.toList()));
 
         return Result.success(null, page);
 
@@ -153,9 +151,9 @@ public class ManualScoreServiceImpl extends ServiceImpl<ManualScoreMapper, Manua
 
     @Override
 
-    public Result<IPage<UncorrectedUserVO>> stuExamPage(Integer pageNum, Integer pageSize, Integer examId,String realName) {
+    public Result<IPage<UncorrectedUserVO>> stuExamPage(Integer pageNum, Integer pageSize, Integer examId, String realName) {
         IPage<UncorrectedUserVO> page = new Page<>(pageNum, pageSize);
-        page = userExamsScoreMapper.uncorrectedUser(page, examId,realName);
+        page = userExamsScoreMapper.uncorrectedUser(page, examId, realName);
         return Result.success(null, page);
     }
 }
